--- a/GameZone/Views/Games/Create.cshtml
+++ b/GameZone/Views/Games/Create.cshtml
@@ -60,4 +60,6 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/filesize-validator.js" asp-append-version="true"></script>
     <script src="~/js/game-form.js" asp-append-version="true"></script>
+    <script src="~/scripts/main.js"></script>
+
 }
